<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="24dp">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/inter_regular"
        android:text="Leafio"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/tv_subtitle_input"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle">

        <EditText
            android:id="@+id/et_nama_tanaman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/hint_nama"
            android:importantForAutofill="no"
            android:backgroundTint="#000000"
            android:inputType="textPersonName"
            android:fontFamily="@font/inter_regular"
            android:textSize="14sp"
            android:paddingVertical="12dp"/>

        <EditText
            android:id="@+id/et_jenis_tanaman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/hint_jenis_tanaman"
            android:importantForAutofill="no"
            android:backgroundTint="#000000"
            android:inputType="text"
            android:fontFamily="@font/inter_regular"
            android:textSize="14sp"
            android:paddingVertical="12dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_jadwal_penyiraman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/hint_tgl_siram"
                android:importantForAutofill="no"
                android:backgroundTint="#000000"
                android:inputType="date"
                android:fontFamily="@font/inter_regular"
                android:textSize="14sp"
                android:focusable="false"
                android:clickable="true"
                android:paddingVertical="12dp"
                android:paddingEnd="40dp" />
            <ImageView
                android:id="@+id/iv_cal_penyiraman"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/desc_cal_siram"
                android:src="@android:drawable/ic_menu_my_calendar"
                app:tint="#000000" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_jadwal_pemupukan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/hint_tgl_pupuk"
                android:importantForAutofill="no"
                android:backgroundTint="#000000"
                android:inputType="number"
                android:fontFamily="@font/inter_regular"
                android:textSize="14sp"
                android:focusable="false"
                android:clickable="true"
                android:paddingVertical="12dp"
                android:paddingEnd="40dp" />
            <ImageView
                android:id="@+id/iv_cal_pemupukan"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/desc_cal_pupuk"
                android:src="@android:drawable/ic_menu_my_calendar"
                app:tint="#000000" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_buat_jadwal_final"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/bg_button_green"
        app:backgroundTint="@null"
        android:text="@string/btn_buat_jadwal"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/inter_regular"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>