<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_logo_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_regular"
        android:text="Leafio"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/tv_title_daftar"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_logo_header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_daftar_tanaman"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btn_buat_jadwal"
        app:layout_constraintTop_toBottomOf="@id/tv_title_daftar" />

    <TextView
        android:id="@+id/tv_empty_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/tv_empty_state"
        android:textColor="#888888"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_daftar" />

    <Button
        android:id="@+id/btn_buat_jadwal"
        android:layout_width="189dp"
        android:layout_height="51dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_button_green"
        app:backgroundTint="@null"
        android:fontFamily="@font/inter_regular"
        android:text="@string/btn_buat_jadwal"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>